# scrablozaur

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run.py  scrablozaur.pyi
board_reader/: README.md
board_reader/scripts/: benchmark_pipeline.py  clean_templates.py  generate_synthetic_dataset.py  harvest_digit_templates.py  harvest_templates.py  review_templates.py  train_classifier.py  train_digit_classifier.py
board_reader/src/: cv_utils.py  detect_board.py  detect_grid.py  glyph_normalizer.py  grid_detector.py  grid_reader.py  grid_tuner.py  hsv_config.json  hsv_config.py  hsv_tuner.py  letter_classifier.py  letter_tuner.py  parallel_utils.py  premium_layout.py  read_board.py  read_letters.py  rotate_board.py  tile_detector.py  tuner.py
board_reader/tests/: eval_letters.py  eval_tile_detection.py  ground_truth.py
src/: consts.py  create_dawg.py  create_db_ar.py  data.py  find_board.py  lib.rs  main.py  main.rs  plansze.py  points.py  save_font.py  slowniki.py  speed_test.py  strategy.py  test.py  verify_engine.py
src/create_dawg/: Cargo.toml
src/create_dawg/src/: main.rs
src/dawgpyrust/: Cargo.toml  pyproject.toml
src/dawgpyrust/src/: lib.rs
src/scrablozaur/: Cargo.toml  pyproject.toml
src/scrablozaur/src/: consts.rs  lib.rs
src/scrablozaur2/: Cargo.toml
src/scrablozaur2/src/: main.rs
test/: scr0a.in  scr0c.in  scr0e.in  scr1a.in  scr3a.in
tests/: cli_build.rs  scr0a.in  scr1a.in  scr4.in  test_strategy.py
web/: engine.py  game.py  main.py  models.py  requirements.txt  scan.py
web/routers/: benchmark.py  board.py  game.py  scan.py
web/static/: index.html  style.css
web/static/js/: api.js  benchmark.js  board.js  game.js  main.js  scan.js
words/: czteroliterowki.txt  dwuliterowki.txt  dziewiecioliterowki.txt  osmioliterowki.txt  piecioliterowki.txt  scraped_urls.json  siedmioliterowki.txt  slowniki.py  szescioliterowki.txt  trzyliterowki.txt
