[project]
name = "scrablozaur"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "opencv-python>=5.0.0.93",
    "numpy>=2.5.1",
    "torch>=2.13.0",
    "pillow>=12.3.0",
    "tqdm>=4.69.0",
    "types-tqdm>=4.69.0.20260720",
    "matplotlib>=3.11.1",
]

[dependency-groups]
dev = [
    "maturin>=1.14.1",
]

# This pyproject.toml exists for uv's dependency management (web/ + board_reader/
# runtime deps), not to package the crate for PyPI -- the compiled scrablozaur
# extension is built ad hoc via `maturin develop --release` (see README). Once a
# pyproject.toml is present maturin insists on a valid [build-system], and uv
# would otherwise try to build/install this "package" on every sync -- both
# turned off here to keep `uv sync` a pure dependency install, same as before
# this file existed.
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
package = false

# `extension-module` is off by default in Cargo.toml so `cargo run`/`cargo build`
# (the DAWG CLI/bench binary) can link against libpython normally; maturin needs
# it explicitly enabled to build the importable Python extension.
[tool.maturin]
features = ["pyo3/extension-module"]
