[package]
name = "dawgpyrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dawgpyrust"
crate-type = ["cdylib"]
proc-macro = true

[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module"] }
serde = "1.0.190"
serde-pickle = "1.1.1"
